2006.11.08: David Nichols
	* updated configure to find ncurses in non-standard locations and to use
	  Solaris curses if found
	* updated configure to detect and use oracle instant client libraries if
	  found
	* more HP-UX build fixes

2006.11.07: David Nichols
	* HP-UX configure fix in configure.ac
	* fixed character set names to use only valid aliases on HP-UX
	* configure updates to allow TIBCO AE SDK to be recognized on HP-UX
	* HP-UX compile fixes
	* detect static-only libraries in configure and make sure to set up link
	  line to include full static library path, otherwise building modules
	  fails on HP-UX

2006.11.06: David Nichols
	* replaced obsolete autoconf/automake macros in configure.ac
	* added "class" to declaration in Exception.h to enable compilation when
	  "QoreNode.h" is not included before Exception.h

2006.10.27: Pavel Vozenilek
	* added unit test support (minitest.hpp)

2006.10.26: Pavel Vozenilek
	* ScopeGuard moved into include/
	* added support for building as one translation unit

2006.10.24: Pavel Vozenilek
	* class to keep transaction context added

2006.10.24: David Nichols
	* fixed non-debugging builds

2006.10.24: Pavel Vozenilek
	* added tuxedo_support.q with high level interface

2006.10.23: Pavel Vozenilek
	* added files for FML processing and HTML file with Wiki-style documentation

2006.10.20: David Nichols
	* fixed a segfault in the background operator when a parse expression is
	  evaluated to NULL

2006.10.19: David Nichols
	* fixed datasource parsing to find the last occurrence of '@' in the
	  string so that passwords can contain '@' characters

2006.10.14: David Nichols
	* make all parseXMLRPC* functions ignore significant whitespace
	* set relative=false in methods where an absolute date is assigned in
	  the DateTime class
	* fixed a memory leak with the qore basename() function
	* fixed a circular reference count issue with thread data and the
	  QoreProgram class