@@ -4,6 +4,7 @@
 	* updated configure to detect and use oracle instant client libraries if
 	  found
 	* more HP-UX build fixes
+	* Darwin "environ" fix (why was this working before?)
 
 2006.11.07: David Nichols
 	* HP-UX configure fix in configure.ac
